apps/minecraft.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mc.opscore.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  type: LoadBalancer
  ports:
    - port: 25565
      targetPort: 25565
  selector:
    app: minecraft
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-metrics
  labels:
    app: minecraft
    component: metrics
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: metrics
  selector:
    app: minecraft
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minecraft
spec:
  serviceName: "minecraft"
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      containers:
      - name: minecraft
        image: itzg/minecraft-server
        resources:
          requests:
            memory: "8Gi"
            cpu: "2"
          limits:
            memory: "10Gi"
        volumeMounts:
        - name: minecraft-data
          mountPath: /data
        livenessProbe:
          exec:
            command:
            - mc-health
          initialDelaySeconds: 120
          periodSeconds: 60
        readinessProbe:
          exec:
            command:
            - mc-health
          initialDelaySeconds: 60
          periodSeconds: 10
      - name: mc-monitor
        image: itzg/mc-monitor
        args: ["export-for-prometheus"]
        ports:
          - containerPort: 8080
            name: metrics
  volumeClaimTemplates:
  - metadata:
      name: minecraft-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard-rwo"
      resources:
        requests:
          storage: 10Gi
